--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "readable-stream": "2.2.2"
+    "readable-stream": "2.2.2",
+    "concat-stream": "1.5.2"
   },
   "devDependencies": {
     "tap": "8.0.0"
