--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asset-pipe-sink-mem",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-beta.1",
   "author": {
     "name": "Trygve Lie",
     "email": "post@trygve-lie.com"
@@ -20,21 +20,26 @@
       "email": "post@trygve-lie.com"
     }
   ],
-  "engines": {
-    "node" : "6.x"
-  },
   "bugs": {
     "url": "https://github.com/asset-pipe/asset-pipe-sink-mem/issues"
   },
   "license": "MIT",
   "dependencies": {
-    "readable-stream": "2.2.2",
+    "JSONStream": "1.3.1",
+    "asset-pipe-common": "1.0.0-beta.4",
+    "readable-stream": "2.2.9",
     "concat-stream": "1.6.0"
   },
   "devDependencies": {
-    "tap": "8.0.1"
+    "eslint": "^3.19.0",
+    "eslint-config-finn": "^1.0.1",
+    "tap": "10.3.2"
   },
   "scripts": {
-    "test": "tap test/*.js"
-  }
+    "lint": "eslint .",
+    "test": "tap --jobs=4 test/*.js"
+  },
+  "files": [
+    "lib"
+  ]
 }
