--- a/.eslintrc
+++ b/.eslintrc
@@ -1,32 +1,15 @@
 {
-  "env": {
-    "browser": true,
-    "node": true,
-    "es6": true
+  "root": true,
+  "parserOptions": {
+    "ecmaVersion": 2017
   },
-
-  "ecmaFeatures": {
-    "arrowFunctions": true,
-    "binaryLiterals": true,
-    "blockBindings": true,
-    "classes": true,
-    "defaultParams": true,
-    "destructuring": true,
-    "forOf": true,
-    "generators": true,
-    "modules": true,
-    "objectLiteralComputedProperties": true,
-    "objectLiteralDuplicateProperties": true,
-    "objectLiteralShorthandMethods": true,
-    "objectLiteralShorthandProperties": true,
-    "octalLiterals": true,
-    "regexUFlag": true,
-    "regexYFlag": true,
-    "spread": true,
-    "superInFunctions": true,
-    "templateStrings": true,
-    "unicodeCodePointEscapes": true,
-    "globalReturn": true
+  "extends": [
+    "finn",
+    "finn/node",
+    "finn-prettier"
+  ],
+  "env": {
+    "node": true,
+    "jest": true
   }
-
 }
