--- a/package.json
+++ b/package.json
@@ -31,15 +31,28 @@
     "concat-stream": "1.6.0"
   },
   "devDependencies": {
-    "eslint": "^4.1.1",
+    "eslint": "^4.9.0",
     "eslint-config-finn": "^3.0.0",
-    "tap": "10.7.2"
+    "eslint-config-finn-prettier": "^3.0.1",
+    "jest": "^21.2.1",
+    "prettier": "^1.8.1"
   },
   "scripts": {
     "lint": "eslint .",
-    "test": "tap --jobs=4 test/*.js"
+    "test": "jest"
   },
   "files": [
     "lib"
-  ]
+  ],
+  "jest": {
+    "clearMocks": true,
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
+    }
+  }
 }
