--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: node_js
 node_js:
-  - "8"
+  - '8'
+  - '9'
 script:
   - npm test
+  - npm run lint
+cache:
+  npm: true
+  directories:
+    - node_modules
 after_success:
   - npm run semantic-release
 branches:
