--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asset-pipe-sink-mem",
-  "version": "1.0.0-beta.5",
+  "version": "0.0.0-development",
   "author": {
     "name": "Trygve Lie",
     "email": "post@trygve-lie.com"
@@ -9,7 +9,7 @@
   "main": "./lib/sink.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:asset-pipe/asset-pipe-sink-mem.git"
+    "url": "https:git@github.com:asset-pipe/asset-pipe-sink-mem.git"
   },
   "keywords": [
     "test"
@@ -33,13 +33,18 @@
   "devDependencies": {
     "eslint": "^4.1.1",
     "eslint-config-finn": "^3.0.0",
-    "tap": "10.7.2"
+    "tap": "10.7.2",
+    "semantic-release": "^8.2.0"
   },
   "scripts": {
     "lint": "eslint .",
-    "test": "tap --jobs=4 test/*.js"
+    "test": "tap --jobs=4 test/*.js",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "files": [
     "lib"
-  ]
+  ],
+  "publishConfig": {
+    "access": "restricted"
+  }
 }
