--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asset-pipe-sink-mem",
+  "name": "@asset-pipe/sink-mem",
   "version": "0.0.0-development",
   "author": "Trygve Lie <post@trygve-lie.com>",
   "description": "Module for writing and reading asset feeds and js/css bundles to and from a simple in memory store",
