--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "url": "https://github.com/asset-pipe/asset-pipe-sink-mem/issues"
   },
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "JSONStream": "1.3.1",
     "asset-pipe-common": "1.0.0-beta.6",
@@ -57,9 +60,6 @@
   "files": [
     "lib"
   ],
-  "publishConfig": {
-    "access": "restricted"
-  },
   "jest": {
     "clearMocks": true,
     "coverageThreshold": {
