--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   "dependencies": {
     "JSONStream": "1.3.1",
     "asset-pipe-common": "1.0.0-beta.6",
-    "readable-stream": "2.3.3",
-    "concat-stream": "1.6.0"
+    "boom": "^7.1.1",
+    "concat-stream": "1.6.0",
+    "readable-stream": "2.3.3"
   },
   "devDependencies": {
     "commitizen": "^2.9.6",
