chore: add eslint check for missing deps

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,38 @@
 {
   "root": true,
+  "plugins": ["import"],
   "parserOptions": {
     "ecmaVersion": 2017
   },
   "extends": [
+    "plugin:import/recommended",
     "finn",
     "finn/node",
     "finn-prettier"
   ],
-  "env": {
-    "node": true,
-    "jest": true
-  }
+  "rules": {
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": false
+      }
+    ]
+  },
+  "overrides": [
+    {
+      "files": "test/**/*",
+      "env": {
+        "jest": true,
+        "node": true
+      },
+      "rules": {
+        "import/no-extraneous-dependencies": [
+          "error",
+          {
+            "devDependencies": true
+          }
+        ]
+      }
+    }
+  ]
 }
