--- a/package.json
+++ b/package.json
@@ -40,13 +40,14 @@
     "eslint": "^4.10.0",
     "eslint-config-finn": "^3.0.0",
     "eslint-config-finn-prettier": "^3.0.1",
-    "jest": "^21.2.1",
-    "prettier": "^1.8.1",
-    "tap": "10.7.2",
+    "eslint-plugin-import": "^2.8.0",
     "husky": "^0.14.3",
-    "semantic-release": "^8.2.0",
+    "jest": "^21.2.1",
     "lint-staged": "^6.0.0",
-    "projectz": "^1.4.0"
+    "prettier": "^1.8.1",
+    "projectz": "^1.4.0",
+    "semantic-release": "^8.2.0",
+    "tap": "10.7.2"
   },
   "scripts": {
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
