--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "lint-staged": "^6.0.0",
     "prettier": "^1.9.2",
     "projectz": "^1.4.0",
-    "semantic-release": "^8.2.3",
-    "tap": "10.7.2"
+    "semantic-release": "^8.2.3"
   },
   "scripts": {
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
